package edu.ntnu.idatt2003.lectures.interfaces.figur;

/**
 * The Paintable interface represents an object that can be painted.
 * Classes that implement this interface must provide an implementation
 * for the paint() method.
 */
public interface Paintable {

  /**
   * Paints the object.
   */
  public void paint();
}
